traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  res = (getDirection() == Direction.EAST) && isFacingWall()
  ^Snake:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  left()
  ^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  res = res && (getDirection() == Direction.NORTH) && isFacingWall()
  ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  right()
  ^